--- a/style.css
+++ b/style.css
@@ -1,17 +1,48 @@
-
 body {
-    margin: 0;
-    padding: 0;
+    @import url(https://fonts.googleapis.com/css?family=Cuprum:400,700,400italic&subset=latin,cyrillic);
+    font-family: 'Cuprum', sans-serif;
+    font-size: 16px;
+    max-width: 100%;
 }
 
 .music {
-    margin: 40px;
-    margin-left: 10%;
-    margin-right: 10%;
+    height: 100vh;
+    background-color: #F7F7F7;
+    margin-top: 40px;
+    width: 100%
 }
 
 .song {
+    margin-left: 16%;
+    margin-top: 2px;
+    margin-right: 10%;
     height: 70px;
+}
+
+@media only screen and (max-width: 850px) {
+    .song {
+        margin: 2px 10px 0 10px;
+    }
+}
+
+@media only screen and (max-width: 660px) {
+    .song {
+        margin: 2px 0 0 -20px;
+        width: 100%;
+        -ms-transform: scale(0.8, 0.8); /* IE 9 */
+        -webkit-transform: scale(0.8, 0.8); /* Safari */
+        transform: scale(0.8, 0.8);
+    }
+}
+
+@media only screen and (max-width: 580px) {
+    .song {
+        margin: 2px 0 0 -70px;
+        width: 100%;
+        -ms-transform: scale(0.7, 0.7); /* IE 9 */
+        -webkit-transform: scale(0.7, 0.7); /* Safari */
+        transform: scale(0.7, 0.7);
+    }
 }
 
 .songtitle {
@@ -201,10 +232,10 @@ input[type=range].vVertical {
     width: 50px;
     height:10px;
     margin-left: 530px;
-    -webkit-transform:rotate(90deg);
-    -moz-transform:rotate(90deg);
-    -o-transform:rotate(90deg);
-    -ms-transform:rotate(90deg);
-    transform:rotate(90deg);
+    -webkit-transform:rotate(270deg);
+    -moz-transform:rotate(270deg);
+    -o-transform:rotate(270deg);
+    -ms-transform:rotate(270deg);
+    transform:rotate(270deg);
     z-index: 0;
 }
